--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                   <div class="player-current-score" id="current-0">10</div>
               </div>
        </div>
-       <div class="player-0.0-panel">
+       <div class="player-0-0-panel">
             <div class="name-player" id="name-1">PLAYER 2</div>
               <div class="player-score" id="score-1">72</div>
                 <div class="player-current-box">
-                  <div class="player-current-label">Current</div>
+                  <div class="player-current-label">Current</div
                     <div class="player-current-score" id="current-0.0">0</div>
                 </div>
        </div>
@@ -43,8 +43,8 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
         <script src='https://code.jquery.com/jquery-3.4.1.js'></script>
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts.js"></script
 
-</body>
+</body>  
 
 </html>
