--- a/index.html
+++ b/index.html
@@ -5,34 +5,39 @@
        <meta charset=UTF-8>
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
-
        <link href="css/styles.css" rel="stylesheet" type="text/css">
        <title>PIG DICE GAME</title>
-
     </head>
+
 <body>
-   <div class="container">
-       <div class=" player-0-panel-active">
-          <div class= "name-player" id="name-1" editcontent="True"> PLAYER 1</div>
 
-            <div class="score" id="score-0">33</div>
-              <div class="player-current-box">
-                <div class="player-current-label">CURRENT SCORE</div>
-                  <div class="player-current-score" id="current-0">10</div>
-              </div>
-       </div>
-       <div class="player-0-0-panel">
-            <div class="name-player" id="name-1">PLAYER 2</div>
-              <div class="player-score" id="score-1">72</div>
-                <div class="player-current-box">
-                  <div class="player-current-label">Current</div
-                    <div class="player-current-score" id="current-0.0">0</div>
+         <div class="container">
+            <div class="player1Div">
+                <div class="player1Header">
+                    <h1><strong>PLAYER 1</strong><button class="currentPlayer">&#10004;</button></h1>
                 </div>
-       </div>
-   </div>
+                <div class="player1Score">25</div>
+                <div class="player1ScoreDiv">
+                    <h4 class="player1TotalScore"> TOTAL SCORE</h4>
+                    <p class="player1ScoreNo">5</p>
+                </div>
+            </div>
+    
+            <div class="player2Div">
+                <div class="player2Header">
+                    <h1><strong>PLAYER 2</strong><button class="activeJS currentPlayer">&#10004;</button></h1>
+                </div>
+                <div class="player2Score">
+                    <p>25</p>
+                </div>
+                <div class="player2ScoreDiv">
+                    <h4 class="player2TotalScore">TOTAL SCORE</h4>
+                    <p class="player2ScoreNo">5</p>
+                </div>
+            
 
-
-    <p></p>
+  </div>
+  
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -43,7 +48,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
         <script src='https://code.jquery.com/jquery-3.4.1.js'></script>
-        <script src="js/scripts.js"></script
+        <script src="js/scripts.js"></script>
 
 </body>  
 
