Add button images

--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
             <div class="middleSection">
                 <div class="newGameBtn"><button><img src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/add_circle_outline.png" alt="add symbol">New
                         Game</button></div>
-                <div class="dice"><img class="diceJS" src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/dice6.png" alt="dice"></div>
-                <div class="keepBtn"><button>Keep</button></div>
-                <div class="rollBtn"><button><img src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/roll.png" alt="roll symbol">Roll</button></div>
+                <div class="dice"><img class="diceJS" src="img/dice.svg" alt="dice"></div>
+                <div class="keepBtn"><button>KEEP</button></div>
+                <div class="rollBtn"><button><img src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/roll.png" alt="roll symbol">ROLL</button></div>
             </div>
         </div>
-        <br>
         <div class="instructions">
                 <p> Press keep to secure points.If you Roll a 1 you lose your Total Score.First to 100 wins</p>
             </div>
