make changes to css styles

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         Game</button></div>
                 <div class="dice"><img class="diceJS" src="img/dice.svg" alt="dice"></div>
                 <div class="keepBtn"><button>KEEP</button></div>
-                <div class="rollBtn"><button><img src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/roll.png" alt="roll symbol">ROLL</button></div>
+                <div class="rollBtn"><button><img src="img/roll.svg" alt="roll icon">ROLL</button></div>
             </div>
         </div>
         <div class="instructions">
