navigation section complete

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
        <meta charset=UTF-8>
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
        <link href="css/styles.css" rel="stylesheet" type="text/css">
        <title>PIG DICE GAME</title>
     </head>
@@ -39,7 +39,7 @@
                 <div class="newGameBtn"><button><img src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/add_circle_outline.png" alt="add symbol">New
                         Game</button></div>
                 <div class="dice"><img class="diceJS" src="img/dice.svg" alt="dice"></div>
-                <div class="keepBtn"><button>KEEP</button></div>
+                <div class="keepBtn"><button><img src="img/keep.svg" alt="keep icon">KEEP</button></div>
                 <div class="rollBtn"><button><img src="img/roll.svg" alt="roll icon">ROLL</button></div>
             </div>
         </div>
