--- a/index.html
+++ b/index.html
@@ -1,66 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset=UTF-8>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <title>PIG DICE GAME</title>
+  </head>
 
-    <head>
-       <meta charset=UTF-8>
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-       <link href="css/styles.css" rel="stylesheet" type="text/css">
-       <title>PIG DICE GAME</title>
-    </head>
+  <body>
 
-<body>
-
-         <div class="container">
-            <div class="player1Div">
-                <div class="player1Header">
-                    <h1><strong>PLAYER 1</strong><button class="currentPlayer">&#10004;</button></h1>
-                </div>
-                <div class="player1Score">25</div>
-                <div class="player1ScoreDiv">
-                    <h4 class="player1TotalScore"> TOTAL SCORE</h4>
-                    <p class="player1ScoreNo">5</p>
-                </div>
-            </div>
-    
-            <div class="player2Div">
-                <div class="player2Header">
-                    <h1><strong>PLAYER 2</strong><button class="activeJS currentPlayer">&#10004;</button></h1>
-                </div>
-                <div class="player2Score">
-                    <p>25</p>
-                </div>
-                <div class="player2ScoreDiv">
-                    <h4 class="player2TotalScore">TOTAL SCORE</h4>
-                    <p class="player2ScoreNo">5</p>
-                </div>
-            </div>
-            <div class="middleSection">
-                <div class="newGameBtn"><button><img src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/add_circle_outline.png" alt="add symbol">New
-                        Game</button></div>
-                <div class="dice"><img class="diceJS" src="img/dice.svg" alt="dice"></div>
-                <div class="keepBtn"><button><img src="img/keep.svg" alt="keep icon">KEEP</button></div>
-                <div class="rollBtn"><button><img src="img/roll.svg" alt="roll icon">ROLL</button></div>
-            </div>
-        </div>
-        <div class="instructions">
-                <p> Press keep to secure points.If you Roll a 1 you lose your Total Score.First to 100 wins</p>
-            </div>
-
-  </div>
-  
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-        <script src='https://code.jquery.com/jquery-3.4.1.js'></script>
-        <script src="js/scripts.js"></script>
-
-</body>  
-
+  </body>  
 </html>
