--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
 
   <body>
 
+
+    </div>
+    <script src='js/jquery-3.4.1.js'></script>
+    <script src="js/scripts.js"></script>
   </body>  
 </html>
