player1 button functionality

--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
   <body>
 
     <div class="contain">
-      <div 
+      <div class="player1Div">
+        <div class="player1Header">
+          <h1><strong>PLAYER 1</strong><button class="currentPlayer">&#10004;</button></h1>
+        </div>
+        <div class="player1Score">
 
+        </div>
+        <div class="player1ScoreDiv">
+          <h4 class="player1TotalScore"> TOTAL SCORE</h4>
+          <p class="player1ScoreNo"></p>
+        </div>
+      </div>
+    
+     
     </div>
     <script src='js/jquery-3.4.1.js'></script>
     <script src="js/scripts.js"></script>
