Newgame button added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
           <h4 class="player2TotalScore">TOTAL SCORE</h4>
           <p class="player2ScoreNo">
 
-         
+          </p>
+        </div>
+      </div>
+      <div class="middleSection">
+        <div class="newGameBtn">
+          <button>
+          <img src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/add_circle_outline.png" alt="add symbol">NewGame
+          </button>
+        </div>
+        
+
     </div>
     <script src='js/jquery-3.4.1.js'></script>
     <script src="js/scripts.js"></script>
