startbutton navigation working

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <img src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/add_circle_outline.png" alt="add symbol">NewGame
           </button>
         </div>
+        <div class="game-start">
+          <button class="start btn-info btn">START</button>
+        </div>
         
 
     </div>
