keep button navigation working

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
         <div class="game-start">
           <button class="start btn-info btn">START</button>
         </div>
-        
+        <div class="keepBtn">
+          <button>
+            <img src="img/keep.svg" alt="keep icon">KEEP
+          </button>
+        </div>
+       
 
     </div>
     <script src='js/jquery-3.4.1.js'></script>
