--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
             <img src="img/keep.svg" alt="keep icon">KEEP
           </button>
         </div>
-       
+        <div class="rollBtn">
+         <button>
+           <img src="img/roll.svg" alt="roll icon">ROLL
+         </button>
+        </div>
+       </div>
+      </div>
+      
 
     </div>
     <script src='js/jquery-3.4.1.js'></script>
