playergame instructions added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         </div>
        </div>
       </div>
-      
+      <div class="instructions">
+    <p><strong>If a player chooses to "keep", their turn total is added to their score, and it becomes the next player's turn.</strong></p>
+      <p><strong>The first player to score 100 or more points wins</strong></p>
+      </div>
 
     </div>
     <script src='js/jquery-3.4.1.js'></script>
