variables for players,random numbers and total added

--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
       <div class="middleSection">
         <div class="newGameBtn">
           <button>
-          <img src="https://raw.githubusercontent.com/porquesammy/Pig-Dice-Game/master/assets/add_circle_outline.png" alt="add symbol">NewGame
+          
           </button>
         </div>
         <div class="game-start">
-          <button class="start btn-info btn">START</button>
+          
         </div>
         <div class="row">
-        <div class="keepBtn1">
+        <div class="holdBtn1">
           <button>
-            <img src="img/keep.svg" alt="keep icon">KEEP
+            <img src="img/keep.svg" alt="hold icon">HOLD
           </button>
         </div>
-        <div class="keepBtn2">
+        <div class="holdBtn2">
             <button>
-              <img src="img/keep.svg" alt="keep icon">KEEP
+              <img src="img/keep.svg" alt="hold icon">HOLD
             </button>
           </div>
         </div>
@@ -87,6 +87,6 @@
 
     </div>
     <script src='js/jquery-3.4.1.js'></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/script.js"></script>
   </body>  
 </html>
